# leakchk

./: .gitmodules  CMakeLists.txt  README.md  example.c  leakchk.c  leakchk.h
